k8s/neighbour.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments

spec:
  replicas: 1

  selector:
    matchLabels:
      app: reporting

  template:
    metadata:
      labels:
        app: reporting

    spec:
      serviceAccountName: reporting

      securityContext:
        runAsNonRoot: true
        runAsUser: 65534

      containers:
        - name: client
          image: curlimages/curl:8.8.0

          command:
            - sleep
            - infinity

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "100m"
              memory: "128Mi"
