k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api

spec:
  selector:
    app: ledger-api

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
