k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api-ingress
  namespace: payments
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: ledger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ledger-api
                port:
                  number: 8080
